clusters/flux-playground/workload/base/policies.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-infra-to-dev-services
  namespace: dev
  labels:
    app.kubernetes.io/part-of: gateway-api-qa
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infra
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-infra-routes-to-dev-app-services
  namespace: dev
  labels:
    app.kubernetes.io/part-of: gateway-api-qa
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infra
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
      namespace: infra
  to:
    - group: ""
      kind: Service
      name: whoami
    - group: ""
      kind: Service
      name: grpc-backend
