clusters/flux-playground/workload/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dev-gateway
  namespace: dev
  labels:
    app.kubernetes.io/part-of: gateway-api-qa
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 127.0.0.1
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: whoami.dev.localhost
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: HTTPRoute
    - name: https
      protocol: HTTPS
      port: 443
      hostname: whoami.dev.localhost
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: dev-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: HTTPRoute
    - name: grpc
      protocol: HTTP
      port: 8080
      hostname: grpc.dev.localhost
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: GRPCRoute
    - name: passthrough
      protocol: TLS
      port: 9443
      hostname: tls.dev.localhost
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
    - name: tcp
      protocol: TCP
      port: 9000
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
    - name: udp
      protocol: UDP
      port: 9001
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: UDPRoute
