clusters/flux-playground/workload/base/ui-referencegrant-ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-referencegrant-ingress-preview
  namespace: dev
  labels:
    app.kubernetes.io/part-of: gateway-api-qa
spec:
  ingressClassName: nginx
  rules:
    - host: alpha.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
    - host: beta.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
    - host: gamma.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
    - host: delta.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
